# clementine-chrome

./: CMakeLists.txt  LinuxPNaCL.cmake  README
app/: CMakeLists.txt  background.js  mainwindow.html  mainwindow.js  manifest.json  rpcchannel.js
nacl/: CMakeLists.txt  clementine.nmf  common.h  instance.cc  instance.h  library.cc  library.h  main.cc  ppfile_iostream.cc  ppfile_iostream.h
